--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,31 @@
   "dependencies": {
     "purescript-prelude": "^3.1.0",
     "purescript-console": "^3.0.0",
-    "purescript-lists": "^4.9.0"
+    "purescript-lists": "^4.10.0",
+    "purescript-math": "^2.1.0",
+    "purescript-maybe": "^3.0.0",
+    "purescript-arrays": "^4.2.1",
+    "purescript-strings": "^3.3.1",
+    "purescript-foldable-traversable": "^3.6.1",
+    "purescript-globals": "^3.0.0",
+    "purescript-tuples": "^4.1.0",
+    "purescript-either": "^3.1.0",
+    "purescript-functions": "^3.0.0",
+    "purescript-control": "^3.3.1",
+    "purescript-validation": "^3.1.0",
+    "purescript-eff": "^3.1.0",
+    "purescript-react": "^4.4.0",
+    "purescript-canvas": "^3.2.0",
+    "purescript-refs": "^3.0.0",
+    "purescript-foreign": "^4.0.1",
+    "purescript-foreign-generic": "^5.0.0",
+    "purescript-maps": "^3.5.2",
+    "purescript-sets": "^3.0.0",
+    "purescript-transformers": "^3.4.0",
+    "purescript-node-readline": "^3.1.0",
+    "purescript-yargs": "^3.1.0",
+    "request": "^2.83.1",
+    "purescript-quickcheck": "^4.6.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
